
// This is auto generated by Protobuf
// 此文件由CSharpGeneratorForProton工具自动生成
// Support: hiramtan@live.com

// [START declaration]
syntax = "proto3";
package Protobuf;
// [END declaration]

// [START java_declaration]
option java_package = "com.proton.protobuf";
option java_outer_classname = "GlobalProto";
// [END java_declaration]

// [START csharp_declaration]
option csharp_namespace = "CSharpGeneratorForProton.Protobuf"; 
// [END csharp_declaration]

message GlobalProto
{
    // 名字字数限制
    int32 NameLimit = 1;
    // 命中修正系数
    double HitCorrection = 2;
    // 等级区间
    LevelRange LevelRange = 3;
    // 初始任务获得道具
    repeated int32 InitItems = 4;
}

message LevelRange
{
    // 
    int32 Min = 1;
    // 
    int32 Max = 2;
}


