
// This is auto generated by Protobuf
// 此文件由CSharpGeneratorForProton工具自动生成
// Support: hiramtan@live.com

// [START declaration]
syntax = "proto3";
package Protobuf;
// [END declaration]

// [START java_declaration]
option java_package = "com.proton.protobuf";
option java_outer_classname = "PersonProto";
// [END java_declaration]

// [START csharp_declaration]
option csharp_namespace = "CSharpGeneratorForProton.Protobuf"; 
// [END csharp_declaration]

message PersonProto
{
    message Header_
    {
        // 
        int32 cmd = 1;
        // 
        int32 seq = 2;
    }

    message Header2_
    {
        // 
        int32 cmd = 1;
        // 
        int32 seq = 2;
        // 
        string ss = 3;
    }

    // 头部
    Header_ header = 1;
    // 账号
    int32 id = 2;
    // 名称
    string name = 3;
    // 年龄
    int32 age = 4;
    // 邮箱
    string email = 5;
    // 数组
    repeated int32 arrays = 6;
    // 数组2
    repeated string array2s = 7;
    // 头部2
    Header2_ header2 = 8;
}


