
// This is auto generated by Protobuf
// 此文件由CSharpGeneratorForProton工具自动生成
// Support: hiramtan@live.com

// [START declaration]
syntax = "proto3";
package Protobuf;
// [END declaration]

// [START java_declaration]
option java_package = "com.proton.protobuf";
option java_outer_classname = "TextProto";
// [END java_declaration]

// [START csharp_declaration]
option csharp_namespace = "CSharpGeneratorForProton.Protobuf"; 
// [END csharp_declaration]

message TextProto
{
    // 文本1
    string Text_1 = 1;
    // 文本2
    string Text_2 = 2;
    // 文本3
    string Text_3 = 3;
}


